feat: create click game and socket implementation (#53)
* feat: click game fonctionnel, have to correct style

* fix: typescript error

* feat: basic implemantation socket on a game with scoring (POC serverside)

* feat: synchronized start

* feat: dynamic end

* feat: return score

* feat: clean socket

* functionnal but not with yugs's socket implementation

---------

Co-authored-by: Arthur Pascal <arthur.pascal@epitech.eu>